--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,12 @@
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/socialite": "^5.6",
+        "laravel/tinker": "^2.7",
+        "league/oauth2-server": "8.2.0",
+        "socialiteproviders/manager": "4.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
